# cshanty

./: .gitignore  README.md  pyproject.toml  setup.py
cshanty/: __init__.py  _builder.py  cases.py  full_demo.c  low_level.py  machinery.py  optimization_funcs.py  python_demo.py  test_propagation.c  test_solver.c  test_steering.c  wrapper.py
cshanty/solvers/: test_solver.py
include/: configstruct.h  constants.h  converters.h  driver.h  ephemeris.h  eqns_of_motion.h  math_utils.h  rotations.h  solver_weights.h  solvers.h  steering_laws.h  thrust.h  types.h
scripts/: eval_tof.py  full_demo.c  optim_kappa_tof.py  optim_weights_tof.py  python_demo.py
src/cshanty/: test_solver.c
tests/: test_machinery.py  test_steering.py  test_steering_benchmark.py  test_steering_g.py
