[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "cffi>=1.16.0",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cshanty"
description = "Solar Sail Guidance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mingde Yin", email = "mdsuper@hotmail.com" }]
maintainers = [{ name = "Mingde Yin", email = "mdsuper@hotmail.com" }]
dependencies = ["cffi >= 1.16.0", "numpy >= 1.26", "matplotlib >= 3.8", "scipy"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/itchono/cshanty"

[tool.setuptools.packages.find]
include = ["cshanty"]

[tool.setuptools_scm]
write_to = "cshanty/_version.py"

[project.optional-dependencies]
test = ["pytest >= 7.3"]
